--- a/lib/send_money_to_lachlan_web/templates/page/index.html.eex
+++ b/lib/send_money_to_lachlan_web/templates/page/index.html.eex
@@ -1,3 +1,4 @@
+<p style="text-align: center;"><%= @quote %></p>
 <img src="<%= static_path(@conn, "/images/Bag.png") %>" style="width: 100%;height: auto;"/>
 <p style="text-align: center;">Please send lumens to <strong>lachlan-wilger*stellarx.com</strong></p>
 <img src="<%= static_path(@conn, "/images/public_address_qr.png") %>" style="display: block;margin-left: auto;margin-right: auto;"/>
